system/cms/themes/pyrocms/css/workless.css
/* ... */
.one_full { 
	width: 250px; 
	margin: 0; 
	float: left; 
}

.one_half { 
	width: 250px; 
	float: left; 
}

.one_third { 
	width: 250px; 
	float: left; 
}

.two_third { 
	width: 250px; 
	float: left; 
}

.one_quarter { 
	width: 250px; 
	float: left; 
}

.three_quarter {
	width: 250px;
	float: left;
}

.topbar {
	height: 200px;
}

.topbar ul li#dashboard-link {
	margin: 8px 10px 8px 15px;
}

.topbar ul li#dashboard-link a {
	padding: 6px 12px;
	color: #ffffff;
	float: left;
}

#logo {
	font-size: 16px;
	color: #ffffff;
	margin: 0 12px 0 3px;
	padding: 15px 15px 15px 0;
	border-right: 1px solid #383838;
	float: left;
}

#logo a {
	font-size: 16px;
	color: #ffffff;
}

.subbar {
	position: fixed;
	z-index: 9997;
	top: 185px;
	right: 0;
	left: 0;
	width: 100%;
	height: 30px;
	background: #f7f7f7;
  	background-repeat: repeat-x;
  	background-image: -khtml-gradient(linear, left top, left bottom, from(#f7f7f7), to(#f3f3f3));
  	background-image: -moz-linear-gradient(#f7f7f7, #f3f3f3);
  	background-image: -ms-linear-gradient(#f7f7f7, #f3f3f3);
  	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f7f7f7), color-stop(100%, #f3f3f3));
  	background-image: -webkit-linear-gradient(#f7f7f7, #f3f3f3);
  	background-image: -o-linear-gradient(#f7f7f7, #f3f3f3);
  	background-image: linear-gradient(#f7f7f7, #f3f3f3);
  	border: 1px solid #ffffff;
  	border-bottom: 1px solid #eeeeee;
  	padding: 10px 15px 15px 0;
  	margin-top: 15px;
  	border-top-right-radius: 5px;
  	-moz-border-radius-topright: 5px; 	
  	-webkit-border-top-right-radius: 5px;
  	border-top-left-radius: 5px;
  	-moz-border-radius-topleft: 5px; 	
  	-webkit-border-top-left-radius: 5px;
  	box-shadow: 0px 0px 1px #aaaaaa;
  	-moz-box-shadow: 0px 0px 1px #aaaaaa;
  	-webkit-box-shadow: 0px 0px 1px #aaaaaa;
}

#content-body {
	top: 135px;
	position: relative;
}

.subbar h2, .subbar h2 a {
  	color: #555555;
  	text-shadow: 1px 1px 0 #ffffff;
	margin: 0;
	padding: 0;
	float: left;
}

.subbar small {
	color: #888888;
	margin: 12px 0 0 0;
	float: left;
	text-shadow: 0 1px 1px #ffffff;
	font-size: 13px;
}

#shortcuts {
	margin: 3px 30px 0 0;
	float: right;
}

#shortcuts h6 {
	display: none;
}

#shortcuts ul {
}

#shortcuts ul li {
	margin: 8px 0 0 10px;
	float: left;
}

#shortcuts ul li a.add {
	margin: 4px 0 0 10px;
	float: left;
}

#shortcuts ul li a.add:before {
  content: '+ ';
  margin-top: -6px;
  color: #333333;
  font-size: 16px;
  font-weight: bold;
  text-shadow: 0 1px 0 #ffffff;
}

#shortcuts li a {
  -webkit-appearance: none;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  -moz-background-clip: padding;
  -webkit-background-clip: padding;
  background-clip: padding-box;
  background: #dddddd;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#ffffff), to(#dddddd));
  background-image: -moz-linear-gradient(#ffffff, #dddddd);
  background-image: -ms-linear-gradient(#ffffff, #dddddd);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
  background-image: -webkit-linear-gradient(#ffffff, #dddddd);
  background-image: -o-linear-gradient(#ffffff, #dddddd);
  background-image: linear-gradient(#ffffff, #dddddd);
  border: 1px solid;
  border-color: #dddddd #bbbbbb #999999;
  cursor: pointer;
  color: #333333;
  font: bold 12px/1.3 'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, sans-serif;
  outline: 0;
  overflow: visible;
  padding: 3px 10px;
  text-shadow: #ffffff 0 1px 1px;
  width: auto;
}

#shortcuts li a:hover {
  background: #ffffff;
  background-image: -khtml-gradient(linear, left top, left bottom, from(#dddddd), to(#ffffff));
  background-image: -moz-linear-gradient(#dddddd, #ffffff);
  background-image: -ms-linear-gradient(#dddddd, #ffffff);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #ffffff));
  background-image: -webkit-linear-gradient(#dddddd, #ffffff);
  background-image: -o-linear-gradient(#dddddd, #ffffff);
  background-image: linear-gradient(#dddddd, #ffffff);
  border: 1px solid;
  border-color: #999999 #bbbbbb #dddddd;
  -webkit-transition: 250ms linear all;
  -moz-transition: 250ms linear all;
  transition: 250ms linear all;
  color: #efa92e;
}

#shortcuts li a.active {
  background: #0069d6;
  color: #ffffff;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
}

#filters ul {
	margin: 0;
	float: left;
}
#filters legend {color: #888; font-size: 12px; padding: 0 6px;}
#filters form > ul > li {
	margin: 8px 0 5px 5px;
	float: left;
}

#filters form > ul > li label {
	margin: 8px 5px 0 0;
	float: left;
}

#filters form > ul > li input[type="text"] {
	margin: 0;
}

#filters a.cancel {
	float: right;
}

.sections_bar {
	position: fixed;
	z-index: 9995;
	top: 258px;
	right: 0;
	left: 0;
	width: 100%;
	height: 33px;
	background: #eceaea;
  	border-bottom: 1px solid #eeeeee;
  	box-shadow: 0px 0px 1px #aaaaaa;
  	-moz-box-shadow: 0px 0px 1px #aaaaaa;
  	-webkit-box-shadow: 0px 0px 1px #aaaaaa;
}
.sections_bar ul li {float: left; position: relative; padding: 8px 10px 10px 10px;}
.sections_bar ul li a {color: #797878; text-shadow: 1px 1px 1px #fff;}
.sections_bar ul li.current a, .sections_bar ul li a:hover {color: #aeadad;}
.sections_bar ul li img {
	position: absolute;
	bottom: -12px;
	left: 32%;
}

.ui-tabs-nav { width: 1180px; float: left; }
.ui-tabs-nav li { position: relative; float: left; border-bottom-width: 0 !important; margin: 22px 0 0 5px; padding: 0; }
.ui-tabs-panel { display: block; border-width: 0; background: none; float: left; }
.ui-tabs-hide { display: none !important; }
/* ... */

